java-auth/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-auth-dev
  labels:
    environment: dev
