java-auth/k8s/overlays/dev/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-auth
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: java-auth
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
